Sun Jul 24 01:19:21 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DAnCE/Plan_Launcher/Plan_Launcher.cpp
	* DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp

	  Fixed a bug (memory problem) in the plan_launcher which caused 
	  the "tearing down" assembly failure.

	* DAnCE/examples/Hello/descriptors/flattened_deploymentplan.cdp
	* DAnCE/examples/BasicSP/descriptors/flattened_deploymentplan.cdp

	  Added a UUID tag to the flattened deployment plan.

Sat Jul 23 23:11:21 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DAnCE/tests/Minimum/Receiver/Receiver.mpc
	* DAnCE/tests/Minimum/Sender/Sender.mpc

	  Modified shared library names to fix some linking erros
	  on build scoreboard.

        * DAnCE/examples/Hello/descriptors/run_test.pl

	  Fixed the script so naming service could be started
	  correctly.

	* DAnCE/examples/Hello/step-by-step.html

	  Simple instruction about using naming service.	

Sat Jul 23 14:53:22 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

	* DAnCE/ciao/Port_Activator.cpp:
	* DAnCE/ciao/Port_Activator.h:
	* DAnCE/ciao/Servant_Activator.cpp:
	* DAnCE/ciao/Servant_Impl_Base.cpp:

	  Added a method in Port_Activator to set the name of
	  port activator. The port activator is used to activate
	  the ports of the component.

	  Fixed a incorrect delete call in the update_port_activator
	  function in Servant_Activator.cpp. This will fix the core
	  dump in the CIAO tests.

	  Modified the calling sequence to deactivate ports when we
	  deactivate the component.

Sat Jul 23 12:23:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/ciao/Servant_Impl_Base.cpp:
          Added several missing ACE_TRY_CHECK macros.

Mon Jul 18 22:31:12 2005  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/ciao/Container_Impl.cpp

	  Fixed some compilation error about using NamingContextEx.

        * DAnCE/examples/Hello/descriptors/run_test.pl

	  Fixed this script so naming service will be started
	  explicitly. Thanks Simon McQueen <sm@prismtech.com>